# tutorial-cmake

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
